--- a/PixelDefense.csproj
+++ b/PixelDefense.csproj
@@ -57,6 +57,8 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Engine\AnimatedSprite.cs" />
+    <Compile Include="Engine\IActor.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Engine\Animation.cs" />
     <Compile Include="Gameplay\Enemy.cs" />
