--- a/PixelDefense.csproj
+++ b/PixelDefense.csproj
@@ -57,7 +57,9 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Controls\Button.cs" />
     <Compile Include="Engine\AnimatedSprite.cs" />
+    <Compile Include="Engine\Component.cs" />
     <Compile Include="Engine\IActor.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Engine\Animation.cs" />
@@ -66,6 +68,9 @@
     <Compile Include="Engine\Sprite.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="States\GameState.cs" />
+    <Compile Include="States\MenuState.cs" />
+    <Compile Include="States\State.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
