--- a/PixelDefense.csproj
+++ b/PixelDefense.csproj
@@ -67,11 +67,10 @@
     <Compile Include="Engine\Sprite.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="States\FirstMapState.cs" />
+    <Compile Include="States\GameState.cs" />
     <Compile Include="States\InstructionsState.cs" />
     <Compile Include="States\MapSelectionState.cs" />
     <Compile Include="States\MenuState.cs" />
-    <Compile Include="States\SecondMapState.cs" />
     <Compile Include="States\State.cs" />
   </ItemGroup>
   <ItemGroup>
