--- a/PixelDefense.csproj
+++ b/PixelDefense.csproj
@@ -58,11 +58,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Controls\Button.cs" />
+    <Compile Include="Engine\AnimationManager.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Engine\Animation.cs" />
     <Compile Include="Gameplay\BasicTower.cs" />
     <Compile Include="Gameplay\Bullet.cs" />
     <Compile Include="Gameplay\Enemy.cs" />
+    <Compile Include="Gameplay\Goblin.cs" />
     <Compile Include="Gameplay\Map.cs" />
     <Compile Include="Engine\Sprite.cs" />
     <Compile Include="Program.cs" />
