--- a/PixelDefense.csproj
+++ b/PixelDefense.csproj
@@ -63,10 +63,13 @@
     <Compile Include="Engine\Animation.cs" />
     <Compile Include="Gameplay\BasicTower.cs" />
     <Compile Include="Gameplay\Bullet.cs" />
-    <Compile Include="Gameplay\Enemy.cs" />
+    <Compile Include="Engine\Enemy.cs" />
+    <Compile Include="Gameplay\FlyingEye.cs" />
     <Compile Include="Gameplay\Goblin.cs" />
     <Compile Include="Gameplay\Map.cs" />
     <Compile Include="Engine\Sprite.cs" />
+    <Compile Include="Gameplay\Mushroom.cs" />
+    <Compile Include="Gameplay\Skeleton.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="States\GameState.cs" />
