--- a/PixelDefense.csproj
+++ b/PixelDefense.csproj
@@ -63,13 +63,18 @@
     <Compile Include="Engine\Animation.cs" />
     <Compile Include="Gameplay\BasicTower.cs" />
     <Compile Include="Gameplay\Bullet.cs" />
-    <Compile Include="Engine\Enemy.cs" />
-    <Compile Include="Gameplay\FlyingEye.cs" />
-    <Compile Include="Gameplay\Goblin.cs" />
+    <Compile Include="Gameplay\Enemy.cs" />
+    <Compile Include="Gameplay\Enemies\FlyingEye.cs" />
+    <Compile Include="Gameplay\Enemies\Goblin.cs" />
     <Compile Include="Gameplay\Map.cs" />
     <Compile Include="Engine\Sprite.cs" />
-    <Compile Include="Gameplay\Mushroom.cs" />
-    <Compile Include="Gameplay\Skeleton.cs" />
+    <Compile Include="Gameplay\Enemies\Mushroom.cs" />
+    <Compile Include="Gameplay\Enemies\Skeleton.cs" />
+    <Compile Include="Gameplay\Towers\BrokenGun.cs" />
+    <Compile Include="Gameplay\Towers\Cannon.cs" />
+    <Compile Include="Gameplay\Towers\DoubleCannon.cs" />
+    <Compile Include="Gameplay\Towers\MachineGun.cs" />
+    <Compile Include="Gameplay\Towers\RocketLauncher.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="States\GameState.cs" />
@@ -110,6 +115,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Gameplay\Bullets\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
