--- a/PixelDefense.csproj
+++ b/PixelDefense.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Gameplay\Towers\RocketLauncher.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="States\GameOverState.cs" />
     <Compile Include="States\GameState.cs" />
     <Compile Include="States\InstructionsState.cs" />
     <Compile Include="States\MapSelectionState.cs" />
