--- a/PixelDefense.csproj
+++ b/PixelDefense.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Gameplay\Towers\DoubleCannon.cs" />
     <Compile Include="Gameplay\Towers\MachineGun.cs" />
     <Compile Include="Gameplay\Towers\RocketLauncher.cs" />
+    <Compile Include="Gameplay\Wave.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="States\GameOverState.cs" />
