--- a/PixelDefense.csproj
+++ b/PixelDefense.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Gameplay\Enemy.cs" />
     <Compile Include="Gameplay\Enemies\Rat.cs" />
     <Compile Include="Gameplay\Enemies\Crab.cs" />
+    <Compile Include="Gameplay\ForgeMaster.cs" />
     <Compile Include="Gameplay\Map.cs" />
     <Compile Include="Engine\Sprite.cs" />
     <Compile Include="Gameplay\Enemies\Bat.cs" />
@@ -79,6 +80,7 @@
     <Compile Include="Gameplay\Towers\DoubleCannon.cs" />
     <Compile Include="Gameplay\Towers\MachineGun.cs" />
     <Compile Include="Gameplay\Towers\RocketLauncher.cs" />
+    <Compile Include="Gameplay\Wave.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="States\GameOverState.cs" />
