--- a/PixelDefense.csproj
+++ b/PixelDefense.csproj
@@ -59,7 +59,9 @@
   <ItemGroup>
     <Compile Include="Controls\Button.cs" />
     <Compile Include="Engine\AnimationManager.cs" />
+    <Compile Include="Engine\Globals.cs" />
     <Compile Include="Engine\SoundControl.cs" />
+    <Compile Include="Engine\SoundItem.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Engine\Animation.cs" />
     <Compile Include="Gameplay\BasicTower.cs" />
