--- a/PixelDefense.csproj
+++ b/PixelDefense.csproj
@@ -57,9 +57,11 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Controls\ArrowSelector.cs" />
     <Compile Include="Controls\Button.cs" />
     <Compile Include="Engine\AnimationManager.cs" />
     <Compile Include="Engine\Globals.cs" />
+    <Compile Include="Engine\Save.cs" />
     <Compile Include="Engine\SoundControl.cs" />
     <Compile Include="Engine\SoundItem.cs" />
     <Compile Include="Game1.cs" />
