--- a/PixelDefense.csproj
+++ b/PixelDefense.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Controls\ArrowSelector.cs" />
     <Compile Include="Controls\Button.cs" />
+    <Compile Include="Controls\FormOption.cs" />
     <Compile Include="Engine\AnimationManager.cs" />
     <Compile Include="Engine\Globals.cs" />
     <Compile Include="Engine\Save.cs" />
